--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dojo Survey</title>
+    <title>Ninja $$$</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='/style.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -15,15 +15,59 @@
 
     <div id="container">
         <div class="row001"> 
+            <p>Money total: {{session['sumTransactionList']}}</p>
+            
             <div class="formContainer01">
+                <p class="formLabels">Farmville</p>
                 <form action="/processMoney" method="post">
-                    <a class="btn btn-primary" href="/" role="button">Click</a>
-                    <p>Money total: {{session['sumTransactionList']}}</p>
-                    <!-- <a class="btn btn-danger" href="/destroy_session" role="button">Reset</a> -->
+                    <input type="hidden" name="which_form" value="transType1">
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Get $$$</button>
+                    <p class="formLabels">Adds 20</p>
                 </form>
             </div>
+
+            <div class="formContainer01">
+                <p class="formLabels">Cavern</p>
+                <form action="/processMoney" method="post">
+                    <input type="hidden" name="which_form" value="transType2">
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Get $$$</button>
+                    <p class="formLabels">Adds 40</p>
+                </form>
+            </div>
+
+            <div class="formContainer01">
+                <form action="/processMoney" method="post">
+                    <input type="hidden" name="which_form" value="transTypeReset">
+                    <button class="btn btn-danger" type="submit">Start Over</button>
+                </form>
+            </div>
+        
+            <div class="formContainer01">
+                <p class="formLabels">Activity Log</p>
+                {% for i in session.transactionsDetailsList: %}
+                <p class="formLabels">
+                {{i}}
+                </p>
+                {%endfor%}   
+            </div>
+
+            <div class="formContainer01">
+                <table class="studentTbl">  
+                    <tr>
+                        <th class="studentTblHdr">Name</th>
+                        <th class="studentTblHdr">Age</th>
+                    </tr>
+                    {% for s in session.StudentInfoList %}
+                    <tr> 
+                        <td class="studentTblData">{{s['name']}}</td>
+                        <td class="studentTblData">{{s['age']}}</td>
+                    </tr>
+                    {% endfor %}    
+                </table>
+            </div>  
+
         </div> 
-        <!-- 
+<!-- 
         <div class="row001"> 
             <div class="formContainer01"> 
                 <h2>Dojo Survey</h2>
@@ -60,7 +104,7 @@
                     
                     <p class="formLabels">Comment (optional):</p>
                     <textarea class="inputTextArea" name="comment" placeholder="Enter comments..."></textarea>  
-                    <!-- <input class="inputTextOneLiner" type="text" name="yourName" placeholder="type it here, man" value=""> -->
+                    <input class="inputTextOneLiner" type="text" name="yourName" placeholder="type it here, man" value=""> 
                     
                     <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
                 </form>
